# ipdvr

./: CMakeLists.txt  COPYING.json  README.md  channeldata.cpp  channeldata.h  config.cpp  config.h  curlfetch.cpp  curlfetch.h  debug.h  fetchjob_curl.cpp  fetchjob_curl.h  ilistingfetch.h  listingdb.cpp  listingdb.h  listingfetch.cpp  listingfetch.h  listingfetch_xmltvse.cpp  listingfetch_xmltvse.h  listingparse_jsontv.cpp  listingparse_jsontv.h  listingupdater.cpp  listingupdater.h  main.cpp  programmedata.h
config/: entertain-min.json  entertain.json
doc/: outline.txt  rest_api.txt
src/ipdvr/: config.cpp  config.h  debug.h  fetchjob_curl.h  ilistingfetch.h  listingdb.cpp  listingdb.h  listingfetch_xmltvse.cpp  listingfetch_xmltvse.h  listingparse_jsontv.cpp  listingparse_jsontv.h  listingupdater.cpp  listingupdater.h  main.cpp
test/ipdvr/: listingdb_test.cpp
